--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,21 +1,20 @@
 header {
-  font-family: $coolveticaRegular;
+  font-family: $coolveticaBold;
   width: 100%;
   position: absolute;
   top: 0;
 }
 
 nav {
-  width: 100%;
+  margin: 0 auto;
+  max-width: 1440px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   color: transparent;
-  padding-left: 30px;
-  padding-right: 10px;
   align-items: center;
 
   & > a {
-    color: #2985b0;
+    color: $primary;
   }
 }
 
@@ -26,6 +25,12 @@ nav {
 .nav-links {
   list-style: none;
   display: flex;
+  letter-spacing: 1px;
+
+  &>.nav-item:last-child {
+    border: 1.5px solid white;
+    border-radius: 20px;
+  }
 }
 
 .nav-item a {
@@ -33,14 +38,16 @@ nav {
   padding: 10px 15px;
   text-decoration: none;
   color: white;
+  text-align: center;
 }
 
 .nav-item:hover {
   background-color: white;
-}
+  border-radius: 20px;
 
-.nav-item:hover a {
-  color: darkgreen;
+  &>a{
+    color: $secondary;
+  }
 }
 
 .logo img {
