--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,3 @@
-@font-face {
-  font-family: "Coolvetica Rg";
-  src: url("../fonts/coolvetica/coolvetica rg.ttf");
-}
-
-@font-face {
-  font-family: "Coolvetica Condensed Rg";
-  src: url("../fonts/coolvetica/coolvetica condensed rg.ttf");
-}
-
-@font-face {
-  font-family: "Coolvetica Compressed Rg";
-  src: url("../fonts/coolvetica/coolvetica compressed rg.ttf");
-}
-
-@font-face {
-  font-family: "Coolvetica Crammed Rg";
-  src: url("../fonts/coolvetica/coolvetica crammed rg.ttf");
-}
-
 *,
 *::before,
 *::after {
@@ -117,7 +97,6 @@ a {
 
 abbr[title] {
   border-bottom: none;
-  text-decoration: underline;
   -webkit-text-decoration: underline dotted;
           text-decoration: underline dotted;
 }
@@ -294,23 +273,43 @@ progress {
   vertical-align: baseline;
 }
 
+@font-face {
+  font-family: "Coolvetica Rg";
+  src: url("../fonts/coolvetica/coolvetica rg.ttf");
+}
+
+@font-face {
+  font-family: "Coolvetica Condensed Rg";
+  src: url("../fonts/coolvetica/coolvetica condensed rg.ttf");
+}
+
+@font-face {
+  font-family: "Coolvetica Compressed Rg";
+  src: url("../fonts/coolvetica/coolvetica compressed rg.ttf");
+}
+
+@font-face {
+  font-family: "Coolvetica Crammed Rg";
+  src: url("../fonts/coolvetica/coolvetica crammed rg.ttf");
+}
+
 header {
-  font-family: "Coolvetica Condensed Rg", sans-serif;
+  font-family: "Coolvetica Rg", sans-serif;
   width: 100%;
   position: absolute;
   top: 0;
 }
 
 nav {
-  width: 100%;
+  margin: 0 auto;
+  max-width: 1440px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   color: transparent;
-  padding-left: 30px;
-  padding-right: 10px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -329,6 +328,12 @@ nav > a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  letter-spacing: 1px;
+}
+
+.nav-links > .nav-item:last-child {
+  border: 1.5px solid white;
+  border-radius: 20px;
 }
 
 .nav-item a {
@@ -336,14 +341,16 @@ nav > a {
   padding: 10px 15px;
   text-decoration: none;
   color: white;
+  text-align: center;
 }
 
 .nav-item:hover {
   background-color: white;
+  border-radius: 20px;
 }
 
-.nav-item:hover a {
-  color: darkgreen;
+.nav-item:hover > a {
+  color: #36a9e0;
 }
 
 .logo img {
@@ -355,8 +362,8 @@ nav > a {
   background-image: url("../asset/Home/Hero.png");
   background-repeat: no-repeat;
   background-position: right top;
-  background-size: 100vh auto;
-  height: 80vh;
+  background-size: auto 45vw;
+  height: 700px;
   color: #2985b0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -364,6 +371,12 @@ nav > a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.hero__container {
+  max-width: 1200px;
+  -ms-grid-column-align: center;
+      justify-self: center;
 }
 
 .hero__title {
