--- a/css/_hero.scss
+++ b/css/_hero.scss
@@ -2,34 +2,63 @@
   background-image: url("../asset/Home/Hero.png");
   background-repeat: no-repeat;
   background-position: right top;
-  background-size:  auto 45vw;
-  height: 700px;
+  background-size:  350px auto;
+  height: 350px;
   color: #2985b0;
   display: flex;
-  align-items: center;
 
   &__container {
     max-width: 1200px;
-    justify-self: center;
+    margin: 0 auto;
   }
 
   &__title {
-    height: 50vh;
-    width: 40vw;
-    background-color: aqua;
+    border-radius: 16px;
+    margin-top: 75px;
+    width: 70vw;
+    background-color: rgba(243, 243, 243, 0.9);
     display: flex;
+    flex-direction: column;
     text-align: left;
     align-items: center;
     justify-content: center;
+  }
 
-    & > h1,
-    & > p {
-      display: block;
+  &__transparent{
+    width: 20%;
+  }
+}
+
+@media only screen and (min-width: 700px) {
+  .hero {
+    height: 480px;
+    align-items: center;
+    background-size:  auto 40vw;
+    background-color: transparent;
+
+    &__title {
+      padding: 50px;
+      background-color: transparent;
+      width: 50vw;
+      margin: 0;
+    }
+    
+    &__transparent{
+      width: 50%;
     }
   }
 }
 
-.services {
-  margin: 0 auto;
-  max-width: 1200px;
+@media only screen and (min-width: 1200px) {
+  .hero {
+    height: 700px;
+    background-size:  auto 40vw;
+    
+    &__title {
+      padding: 50px;
+      background-color: transparent;
+      width: 40vw;
+    }
+  }
+  
 }
