--- a/css/main.css
+++ b/css/main.css
@@ -321,19 +321,26 @@ nav > a {
 
 .logo {
   display: block;
+  background-color: white;
 }
 
 .nav-links {
   list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   letter-spacing: 1px;
 }
 
 .nav-links > .nav-item:last-child {
   border: 1.5px solid white;
   border-radius: 20px;
+}
+
+@media only screen and (min-width: 1200px) {
+  .nav-links {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .nav-item a {
@@ -362,30 +369,31 @@ nav > a {
   background-image: url("../asset/Home/Hero.png");
   background-repeat: no-repeat;
   background-position: right top;
-  background-size: auto 45vw;
-  height: 700px;
+  background-size: 350px auto;
+  height: 350px;
   color: #2985b0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .hero__container {
   max-width: 1200px;
-  -ms-grid-column-align: center;
-      justify-self: center;
+  margin: 0 auto;
 }
 
 .hero__title {
-  height: 50vh;
-  width: 40vw;
-  background-color: aqua;
+  border-radius: 16px;
+  margin-top: 75px;
+  width: 70vw;
+  background-color: rgba(243, 243, 243, 0.9);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-align: left;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -395,13 +403,39 @@ nav > a {
           justify-content: center;
 }
 
-.hero__title > h1,
-.hero__title > p {
-  display: block;
+.hero__transparent {
+  width: 20%;
 }
 
-.services {
-  margin: 0 auto;
-  max-width: 1200px;
+@media only screen and (min-width: 700px) {
+  .hero {
+    height: 480px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-size: auto 40vw;
+    background-color: transparent;
+  }
+  .hero__title {
+    padding: 50px;
+    background-color: transparent;
+    width: 50vw;
+    margin: 0;
+  }
+  .hero__transparent {
+    width: 50%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .hero {
+    height: 700px;
+    background-size: auto 40vw;
+  }
+  .hero__title {
+    padding: 50px;
+    background-color: transparent;
+    width: 40vw;
+  }
 }
 /*# sourceMappingURL=main.css.map */
