--- a/css/_header.scss
+++ b/css/_header.scss
@@ -12,6 +12,7 @@ nav {
   justify-content: space-between;
   color: transparent;
   align-items: center;
+  font-size: 14rem;
 
   & > a {
     color: $primary;
@@ -21,6 +22,11 @@ nav {
 .logo {
   display: block;
   background-color: white;
+
+  &>h1{
+  color: $primary;
+  font-size: 14rem;
+  }
 }
 
 .nav-links {
