--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -1,46 +1,60 @@
+/* Layout & Content*/
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
 
-html {
-  font-size: 1px;
-  line-height: 1;
-  -webkit-text-size-adjust: 100%;
+/* Remove default padding */
+ul[class],
+ol[class],
+dd {
+  padding: 0;
+  list-style: none;
 }
 
-body {
-  font-family: sans-serif;
-  font-size: 14rem;
-  font-weight: 400;
-  line-height: 1.3;
-  color: #222;
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul[class],
+ol[class],
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
   margin: 0;
 }
 
-main {
-  display: block;
+html {
+  font-size: 1px; /*for using REM units*/
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
 }
 
-template {
+body {
+  font-size: 16rem;
+  margin: 0;
+  min-height: 100vh;
+  line-height: 1.5;
+}
+
+template,
+[hidden] {
   display: none;
 }
 
 textarea {
   overflow: auto;
-}
-
-figure {
-  margin: 0;
-}
-
-ul,
-ol,
-dd {
-  margin: 0;
-  padding: 0;
-  list-style: none;
 }
 
 hr {
@@ -49,45 +63,52 @@ hr {
   overflow: visible;
 }
 
-[hidden] {
-  display: none;
-}
-
 img {
   border-style: none;
+  max-width: 100%;
+  display: block;
 }
 
 /* Typography */
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-  padding: 0;
-}
-
-p {
-  margin: 0;
-  padding: 0;
-}
 
 cite {
   font-style: normal;
 }
 
 h1 {
-  font-size: 18rem;
+  font-size: 28rem;
+}
+
+h2 {
+  font-size: 24rem;
+}
+
+h3 {
+  font-size: 20rem;
+}
+
+h4 {
+  font-size: 16rem;
+}
+
+h5 {
+  font-size: 15rem;
+}
+
+h6 {
+  font-size: 14rem;
 }
 
 pre {
-  font-family: monospace;
+  font-family: monospace, monospace;
   font-size: 1em;
 }
 
-a {
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+a[class] {
   text-decoration: none;
   color: inherit;
   cursor: pointer;
@@ -96,6 +117,7 @@ a {
 
 abbr[title] {
   border-bottom: none;
+  text-decoration: underline;
   text-decoration: underline dotted;
 }
 
@@ -107,7 +129,7 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace;
+  font-family: monospace, monospace;
 }
 
 small {
@@ -147,6 +169,8 @@ summary {
   display: list-item;
 }
 
+/* Forms, Input and Buttons */
+
 button,
 input,
 optgroup,
@@ -170,28 +194,20 @@ input {
   margin: 1px;
   border: 1px solid grey;
 }
-
 input[type="submit"],
 input[type="button"],
 input[type="reset"] {
   cursor: pointer;
   border: 1px solid grey;
 }
-
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-  margin: 0;
-}
-
 input:disabled {
   border: 1px solid grey;
   cursor: not-allowed;
 }
-
-button,
-select {
-  text-transform: none;
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+  margin: 0;
 }
 
 input:focus,
@@ -200,12 +216,9 @@ select:focus {
   outline: none;
 }
 
-button {
-  background-color: transparent;
-  color: inherit;
-  border-width: 0;
-  padding: 0;
-  cursor: pointer;
+button,
+select {
+  text-transform: none;
 }
 
 button,
@@ -232,6 +245,13 @@ button:-moz-focusring,
 
 button:disabled {
   cursor: not-allowed;
+}
+button {
+  background-color: transparent;
+  color: inherit;
+  border-width: 0;
+  padding: 0;
+  cursor: pointer;
 }
 
 fieldset {
@@ -267,4 +287,20 @@ fieldset {
 
 progress {
   vertical-align: baseline;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove _all_ animations and transitions for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  * {
+    animation-play-state: paused !important;
+    transition: none !important;
+    scroll-behavior: auto !important;
+  }
 }
