--- a/css/_projects.scss
+++ b/css/_projects.scss
@@ -44,6 +44,7 @@
     text-align: end;
     padding: 30px;
     flex-grow: 1;
-    text-align: center
+    text-align: center;
+    font-size: 24px;
   }
 }
