--- a/scss/pages/home/_contact.scss
+++ b/scss/pages/home/_contact.scss
@@ -5,7 +5,7 @@
 
     &__card{
         padding: 5vw;
-        background-color: $primary;
+        background-color: $color-primary;
         background-image: url("../asset/Home/Contact.png");
         background-repeat: no-repeat;
         background-size: 100%;
