--- a/scss/pages/home/_services.scss
+++ b/scss/pages/home/_services.scss
@@ -1,21 +1,27 @@
 .services{
-    font-size: 20rem;
-    color: $primary;
-    margin: 50px 0;
+    font-size: $fs-normal;
+    color: $color-primary;
+    margin: 50px 0em;
     font-family: $coolveticaRegular;
     
     &__header{
-        line-height: 20rem;
-        border-bottom: 5px dashed $secondary;
         display: inline-block;
+
         padding-bottom: 10px;
+        border-bottom: 5px dashed $color-secondary;
+        
+        margin-bottom: 3em;
+        
+        letter-spacing: 5px;
+        color:$color-secondary;
+        line-height: 20rem;
 
         &>h1 {
-            font-size: 44rem;
+            font-size: $fs-section-title;
         }
         
         &>h4{
-            font-size: 30px;
+            font-size: $fs-section-subtitle;
         }
         
         &>h4, &>h1{
@@ -25,7 +31,7 @@
 
     &__cardGroups{
         max-width: 1440px;
-        margin: 10px auto;
+        margin: 10px 4em;
         justify-items: center;
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -33,14 +39,18 @@
 }
 
 .servicesCard{
-    display: grid;
-    justify-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     width: 80%;
-    height: 300px;
+    max-height: 265px;
+    height: 265px;
     background-color: white;
     box-shadow: 0px 15px 20px -4px rgba(135,135,135,0.5);
     border-radius: 30px;
     border: 1px solid rgb(175, 175, 175);
     letter-spacing: 1px;
+    margin-bottom: 2.5em;
+    margin-top: .5em;
 }
