--- a/scss/pages/home/_hero.scss
+++ b/scss/pages/home/_hero.scss
@@ -4,93 +4,90 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
-  font-family: $coolveticaRegular;
-  font-size: $fs-normal;
   color: #2985b0;
 
   &__container {
     display: flex;
     height: 100%;
-    flex: 1 1 100%;
+    flex: 1 1 30%;
     max-width: 1200px;
     margin: 0 auto;
   }
 
   &__title {
-    border-radius: 16px;
-    margin: 0.1em 5vw 20px 5vw;
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
-    flex: 1 1 100%;
-    align-content: center;
+    flex: 1 1 40%;
     justify-content: center;
-    text-align: left;
-    font-size: $fs-normal;
-    line-height: 28rem;
     align-items: center;
 
+    text-align: center;
+
     & > h1 {
-      font-size: $fs-section-title * 2;
-      margin-top: 0.5em;
+      margin: 0 inherit;
     }
 
     & > h2 {
-      font-size: $fs-section-subtitle * 1;
+      margin: 0 inherit;
     }
 
     & > h2,
     & > h1 {
-      letter-spacing: 3px;
-      margin: 0.2em 0;
+      letter-spacing: 5px;
+      line-height: 1em;
     }
   }
 
   &__transparent {
     display: none;
     visibility: hidden;
-    flex-basis: 100%;
+    flex: 2 1 60%;
     background-image: url("../asset/Home/Hero.png");
     background-repeat: no-repeat;
     background-position: right top;
-    background-size: 100%
+    background-size: 100%;
   }
 }
 
 @media only screen and (min-width: 768px) {
   .hero {
-    height: 40vw;
+    height: 50vw;
 
     &__container {
       align-items: center;
+      max-width: 35%;
     }
 
     &__title {
-      background-color: transparent;
       width: 50vw;
-      margin: 0;
 
       & > h1 {
-        font-size: $fs-section-title * 1.2;
+        font-size: $fs-section-title * 0.5;
       }
 
       & > h2 {
-        font-size: $fs-section-title * 0.3;
+        font-size: $fs-section-subtitle * 0.5;
       }
-      
+
+
     }
-    
-    &__img-container{
+    &__img-container {
+      width: 6em;
       height: auto;
-      width: 12em;
+      position: relative;
+      top: -25px;
     }
-    
+
     &__transparent {
       display: flex;
       visibility: visible;
       height: 100%;
-      flex-basis: 100%;
+      flex-basis: 70%;
+      width: 12em;
+      position: relative;
+      top: -2.5em;
+      z-index: -1;
     }
   }
 }
@@ -99,35 +96,39 @@
   .hero {
 
     &__title {
+      
       & > h1 {
-        font-size: $fs-section-title * 1.5;
+        font-size: $fs-section-title * .8 ;
       }
 
       & > h2 {
-        font-size: $fs-section-title * 0.5;
+        font-size: $fs-section-subtitle * .8;
       }
     }
+    
+          &__img-container {
+            width: 10em;
+            top: -25px;
+          }  
   }
 }
 
 @media only screen and (min-width: 1200px) {
   .hero {
-    /*height: 100vh;*/
-    margin-top: 0;
 
     &__title {
-      margin-top: 5vw;
-      padding: 50px;
-      background-color: transparent;
-      width: 40vw;
-
+      
       & > h1 {
-        font-size: $fs-section-title * 2;
+        font-size: $fs-section-title * 1.2;
       }
 
       & > h2 {
-        font-size: $fs-section-title * .5;
+        font-size: $fs-section-subtitle * 1.2 ;
       }
+
+    }
+    &__transparent {
+      max-width: 1100px;
     }
   }
 }
