--- a/css/main.css
+++ b/css/main.css
@@ -369,6 +369,10 @@ body {
   display: block;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 /*--------------------*/
 /*-----Backgounds-----*/
 /*--------------------*/
@@ -409,11 +413,11 @@ body {
 /*-----Typography-----*/
 /*--------------------*/
 .text-st {
-  font-size: 7em;
+  font-size: 4.2em;
 }
 
 .text-sst {
-  font-size: 3.6em;
+  font-size: 1.44em;
 }
 
 .text-title {
@@ -421,7 +425,7 @@ body {
 }
 
 .text-subtitle {
-  font-size: 1.8em;
+  font-size: 1.2em;
 }
 
 .text-normal {
@@ -525,6 +529,10 @@ body {
   margin-top: 1em;
 }
 
+.mt-h {
+  margin-top: 2.5em;
+}
+
 .ml {
   margin-left: 1em;
 }
@@ -563,6 +571,17 @@ body {
 
   .d-md-none {
     display: none;
+  }
+
+  /*--------------------*/
+  /*-----Typography-----*/
+  /*--------------------*/
+  .text-md-sst {
+    font-size: 1.44em;
+  }
+
+  .text-md-title {
+    font-size: 3.5em;
   }
 }
 .btn {
@@ -659,13 +678,17 @@ header {
 }
 
 nav {
-  background-color: transparent;
-  margin: 0 auto;
-  max-width: 1200px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 14rem;
+  position: fixed;
+  background-color: transparent;
+  padding: 0 5em;
+  width: 100%;
+  font-size: 0.8em;
+}
+nav > ul > li {
+  color: white;
 }
 
 .logo {
@@ -686,13 +709,19 @@ nav {
   vertical-align: middle;
 }
 
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 992px) {
+  nav {
+    padding: 0 2em;
+    font-size: 0.6em;
+  }
+
   .nav-links {
     display: flex;
+    justify-content: flex-end;
     letter-spacing: 1px;
   }
   .nav-links > .nav-item:last-child {
-    border: 1.5px solid #580858;
+    border: 1.5px solid white;
     border-radius: 20px;
   }
   .nav-links > .nav-item:last-child:hover {
@@ -707,6 +736,7 @@ nav {
     padding: 10px 15px;
     text-decoration: none;
     text-align: center;
+    color: white;
   }
 
   .nav-item:hover {
@@ -717,6 +747,11 @@ nav {
   }
 }
 @media only screen and (min-width: 1200px) {
+  nav {
+    padding: 0 2em;
+    font-size: 0.8em;
+  }
+
   .nav-links {
     display: flex;
   }
@@ -734,46 +769,38 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "Coolvetica Condensed Rg", sans-serif;
-  font-size: 1em;
   color: #2985b0;
 }
 .hero__container {
   display: flex;
   height: 100%;
-  flex: 1 1 100%;
+  flex: 1 1 30%;
   max-width: 1200px;
   margin: 0 auto;
 }
 .hero__title {
-  border-radius: 16px;
-  margin: 0.1em 5vw 20px 5vw;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
-  flex: 1 1 100%;
-  align-content: center;
+  flex: 1 1 40%;
   justify-content: center;
-  text-align: left;
-  font-size: 1em;
-  line-height: 28rem;
   align-items: center;
+  text-align: center;
 }
 .hero__title > h1 {
-  font-size: 7em;
-  margin-top: 0.5em;
+  margin: 0 inherit;
 }
 .hero__title > h2 {
-  font-size: 1.8em;
+  margin: 0 inherit;
 }
 .hero__title > h2, .hero__title > h1 {
-  letter-spacing: 3px;
-  margin: 0.2em 0;
+  letter-spacing: 5px;
+  line-height: 1em;
 }
 .hero__transparent {
   display: none;
   visibility: hidden;
-  flex-basis: 100%;
+  flex: 2 1 60%;
   background-image: url("../asset/Home/Hero.png");
   background-repeat: no-repeat;
   background-position: right top;
@@ -782,64 +809,66 @@ nav {
 
 @media only screen and (min-width: 768px) {
   .hero {
-    height: 40vw;
+    height: 50vw;
   }
   .hero__container {
     align-items: center;
+    max-width: 35%;
   }
   .hero__title {
-    background-color: transparent;
     width: 50vw;
-    margin: 0;
   }
   .hero__title > h1 {
-    font-size: 4.2em;
+    font-size: 1.75em;
   }
   .hero__title > h2 {
-    font-size: 1.05em;
+    font-size: 0.6em;
   }
   .hero__img-container {
+    width: 6em;
     height: auto;
-    width: 12em;
+    position: relative;
+    top: -25px;
   }
   .hero__transparent {
     display: flex;
     visibility: visible;
     height: 100%;
-    flex-basis: 100%;
+    flex-basis: 70%;
+    width: 12em;
+    position: relative;
+    top: -2.5em;
+    z-index: -1;
   }
 }
 @media only screen and (min-width: 992px) {
   .hero__title > h1 {
-    font-size: 5.25em;
+    font-size: 2.8em;
   }
   .hero__title > h2 {
-    font-size: 1.75em;
+    font-size: 0.96em;
+  }
+  .hero__img-container {
+    width: 10em;
+    top: -25px;
   }
 }
 @media only screen and (min-width: 1200px) {
-  .hero {
-    /*height: 100vh;*/
-    margin-top: 0;
-  }
-  .hero__title {
-    margin-top: 5vw;
-    padding: 50px;
-    background-color: transparent;
-    width: 40vw;
-  }
   .hero__title > h1 {
-    font-size: 7em;
+    font-size: 4.2em;
   }
   .hero__title > h2 {
-    font-size: 1.75em;
+    font-size: 1.44em;
+  }
+  .hero__transparent {
+    max-width: 1100px;
   }
 }
 .services {
-  font-size: 1em;
+  /*font-size: $fs-normal;*/
   color: #2983AE;
   margin: 50px 0em;
-  font-family: "Coolvetica Condensed Rg", sans-serif;
+  /*font-family: $coolveticaRegular;*/
 }
 .services__header {
   display: inline-block;
@@ -852,16 +881,17 @@ nav {
 }
 .services__header > h1 {
   font-size: 3.5em;
+  margin-bottom: 0.2em;
 }
 .services__header > h4 {
-  font-size: 1.8em;
+  font-size: 1.2em;
 }
 .services__header > h4, .services__header > h1 {
   padding: 10px 5vw;
 }
 .services__cardGroups {
   max-width: 1440px;
-  margin: 10px 4em;
+  margin: 10px auto;
   justify-items: center;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -891,8 +921,8 @@ nav {
   flex-wrap: wrap;
   max-width: 1400px;
   width: 80vw;
-  margin: 2em auto;
-  padding: 5em 8em;
+  margin: 0em auto;
+  padding: 2em 0;
   border-radius: 3em;
   background-color: #64B2E5;
   margin-bottom: 5em;
@@ -908,7 +938,7 @@ nav {
   letter-spacing: 0.1em;
 }
 .whyUs__explain > h1 {
-  font-size: 3.5em;
+  font-size: 2.8em;
   margin-top: 0;
   padding-top: 0;
   line-height: 0.8em;
@@ -916,7 +946,7 @@ nav {
   letter-spacing: 0.15em;
 }
 .whyUs__explain > h3 {
-  font-size: 1.8em;
+  font-size: 1.2em;
   margin-bottom: 0;
   padding-bottom: 0;
   letter-spacing: 0.15em;
@@ -933,9 +963,8 @@ nav {
   letter-spacing: 5px;
 }
 .whyUs__image {
-  display: flex;
+  min-width: 300px;
   order: -1;
-  min-width: 400px;
 }
 
 @media only screen and (min-width: 1200px) {
@@ -963,13 +992,8 @@ nav {
     background-color: #fff;
   }
 }
-.projects {
-  font-size: 1em;
-  font-family: "Coolvetica Condensed Rg", sans-serif;
-}
 .projects__title {
   display: inline-block;
-  justify-content: center;
   padding-bottom: 10px;
   border-bottom: 5px dashed #64B2E5;
   margin-bottom: 3em;
@@ -982,36 +1006,39 @@ nav {
   margin-bottom: 0.2em;
 }
 .projects__title > h4 {
-  font-size: 1.8em;
+  font-size: 1.2em;
 }
 .projects__title > h4, .projects__title > h1 {
   padding: 10px 5vw;
 }
 .projects__info {
-  background-color: #2983AE;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+  padding: 50px;
+  background-color: #2983AE;
 }
 .projects__image {
-  height: 100%;
-  width: auto;
-  flex: 1 1 40%;
   display: flex;
   justify-content: center;
+  height: auto;
+  width: 18em;
+  margin-top: 5em;
 }
 .projects__explain {
   flex: 1 1 60%;
   max-width: 700px;
   padding: 30px;
-  text-align: right;
-  letter-spacing: 0.2em;
-  font-size: 24px;
+  text-align: justify;
+  letter-spacing: 0.1em;
   color: white;
 }
 .projects__explain__codice {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
+  position: relative;
+  top: -1.5em;
 }
 .projects__explain__codice > img {
   max-height: 300px;
@@ -1025,7 +1052,35 @@ nav {
   letter-spacing: 0.1em;
   line-height: 0.5em;
 }
+.projects__pag div {
+  margin-left: 0.5em;
+  border-radius: 3em;
+  width: 1em;
+  height: 1em;
+  background-color: #64B2E5;
+}
 
+@media only screen and (min-width: 1200px) {
+  .projects__info {
+    padding: 0 15px;
+  }
+  .projects__explain {
+    text-align: right;
+  }
+  .projects__explain__codice {
+    width: 100%;
+    justify-content: flex-end;
+    position: relative;
+    right: -6em;
+  }
+  .projects__explain__btn {
+    position: relative;
+    right: 0;
+  }
+  .projects__image {
+    margin-top: 0;
+  }
+}
 .contact {
   display: flex;
   justify-content: center;
