--- a/scss/pages/home/_whyUs.scss
+++ b/scss/pages/home/_whyUs.scss
@@ -6,8 +6,8 @@
 
   max-width: 1400px;
   width: 80vw;
-  margin: 2em auto;
-  padding: 5em 8em;
+  margin: 0em auto;
+  padding: 2em 0;
   border-radius: 3em;
   background-color: $color-secondary;
   margin-bottom: 5em;
@@ -24,7 +24,7 @@
     letter-spacing: 0.1em;
 
     & > h1 {
-      font-size: $fs-section-title;
+      font-size: $fs-section-title * .8;
       margin-top: 0;
       padding-top: 0;
       line-height: 0.8em;
@@ -32,7 +32,7 @@
       letter-spacing: 0.15em;
     }
     & > h3 {
-      font-size: $fs-section-subtitle;
+      font-size: $fs-section-subtitle ;
       margin-bottom: 0;
       padding-bottom: 0;
       letter-spacing: 0.15em;
@@ -53,9 +53,8 @@
   }
 
   &__image {
-    display: flex;
+    min-width: 300px;
     order: -1;
-    min-width: 400px;
   }
 }
 
