Change Primary Color && improved header && Contact section change image and feature responsive

--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -6,14 +6,14 @@ $coolveticaLight: "Coolvetica Compressed Rg", sans-serif;
 $coolveticaThin: "Coolvetica Crammed Rg", sans-serif;
 $coolveticaBold: "Coolvetica Rg", sans-serif;
 
-$fs-section-title: 3.5em;
+$fs-section-title: 3em;
 $fs-section-subtitle:1.2em;
 $fs-normal:1em;
 
 /* ---------------*/
 /* -----Fonts-----*/
 /* ---------------*/
-$color-primary: #2983AE;
+$color-primary: #226B8E;
 $color-secondary: #64B2E5;
 $color-alt: #288ACA;
 $color-blued: #2D95FE;
