--- a/css/main.css
+++ b/css/main.css
@@ -377,7 +377,7 @@ body {
 /*-----Backgounds-----*/
 /*--------------------*/
 .bg-primary {
-  background-color: #2983AE;
+  background-color: #226B8E;
 }
 
 .bg-secondary {
@@ -413,7 +413,7 @@ body {
 /*-----Typography-----*/
 /*--------------------*/
 .text-st {
-  font-size: 4.2em;
+  font-size: 3.6em;
 }
 
 .text-sst {
@@ -421,7 +421,7 @@ body {
 }
 
 .text-title {
-  font-size: 3.5em;
+  font-size: 3em;
 }
 
 .text-subtitle {
@@ -447,7 +447,7 @@ body {
 
 /*---Colors---*/
 .text-c-p {
-  color: #2983AE;
+  color: #226B8E;
 }
 
 .text-c-s {
@@ -455,7 +455,7 @@ body {
 }
 
 .text-c-a {
-  color: #2983AE;
+  color: #226B8E;
 }
 
 .text-info {
@@ -581,7 +581,7 @@ body {
   }
 
   .text-md-title {
-    font-size: 3.5em;
+    font-size: 3em;
   }
 }
 .btn {
@@ -616,20 +616,20 @@ body {
   /*--- Btn Sizes ---*/
 }
 .btn__ps {
-  background-color: #2983AE;
+  background-color: #226B8E;
   border: 0.3em solid #64B2E5;
 }
 .btn__pa {
-  background-color: #2983AE;
+  background-color: #226B8E;
   border: 0.3em solid #288ACA;
 }
 .btn__pb {
-  background-color: #2983AE;
+  background-color: #226B8E;
   border: 0.3em solid #2D95FE;
 }
 .btn__sp {
   background-color: #64B2E5;
-  border: 0.3em solid #2983AE;
+  border: 0.3em solid #226B8E;
 }
 .btn__sa {
   background-color: #64B2E5;
@@ -641,7 +641,7 @@ body {
 }
 .btn__ap {
   background-color: #288ACA;
-  border: 0.3em solid #2983AE;
+  border: 0.3em solid #226B8E;
 }
 .btn__as {
   background-color: #288ACA;
@@ -653,7 +653,7 @@ body {
 }
 .btn__bp {
   background-color: #2D95FE;
-  border: 0.3em solid #2983AE;
+  border: 0.3em solid #226B8E;
 }
 .btn__bs {
   background-color: #2D95FE;
@@ -693,11 +693,11 @@ nav > ul > li {
 
 .logo {
   display: block;
-  color: #2983AE;
+  color: #226B8E;
 }
 .logo > h1 {
-  color: #2983AE;
-  font-size: 3.5em;
+  color: #226B8E;
+  font-size: 3em;
 }
 
 .nav-links {
@@ -804,22 +804,22 @@ nav > ul > li {
   background-image: url("../asset/Home/Hero.png");
   background-repeat: no-repeat;
   background-position: right top;
-  background-size: 100%;
+  background-size: 95%;
 }
 
 @media only screen and (min-width: 768px) {
   .hero {
-    height: 50vw;
+    height: 37vw;
   }
   .hero__container {
     align-items: center;
-    max-width: 35%;
+    max-width: 46%;
   }
   .hero__title {
     width: 50vw;
   }
   .hero__title > h1 {
-    font-size: 1.75em;
+    font-size: 1.5em;
   }
   .hero__title > h2 {
     font-size: 0.6em;
@@ -843,7 +843,7 @@ nav > ul > li {
 }
 @media only screen and (min-width: 992px) {
   .hero__title > h1 {
-    font-size: 2.8em;
+    font-size: 2.4em;
   }
   .hero__title > h2 {
     font-size: 0.96em;
@@ -855,7 +855,7 @@ nav > ul > li {
 }
 @media only screen and (min-width: 1200px) {
   .hero__title > h1 {
-    font-size: 4.2em;
+    font-size: 3.6em;
   }
   .hero__title > h2 {
     font-size: 1.44em;
@@ -865,10 +865,8 @@ nav > ul > li {
   }
 }
 .services {
-  /*font-size: $fs-normal;*/
-  color: #2983AE;
+  color: #226B8E;
   margin: 50px 0em;
-  /*font-family: $coolveticaRegular;*/
 }
 .services__header {
   display: inline-block;
@@ -880,7 +878,7 @@ nav > ul > li {
   line-height: 20rem;
 }
 .services__header > h1 {
-  font-size: 3.5em;
+  font-size: 3em;
   margin-bottom: 0.2em;
 }
 .services__header > h4 {
@@ -938,7 +936,7 @@ nav > ul > li {
   letter-spacing: 0.1em;
 }
 .whyUs__explain > h1 {
-  font-size: 2.8em;
+  font-size: 2.4em;
   margin-top: 0;
   padding-top: 0;
   line-height: 0.8em;
@@ -958,7 +956,7 @@ nav > ul > li {
   background-color: #288ACA;
   margin-top: 3em;
   padding: 0.3em 3em;
-  border: 3px solid #2983AE;
+  border: 3px solid #226B8E;
   border-radius: 1em;
   letter-spacing: 5px;
 }
@@ -984,7 +982,7 @@ nav > ul > li {
     background-color: #288ACA;
     margin-top: 3em;
     padding: 0.3em 3em;
-    border: 3px solid #2983AE;
+    border: 3px solid #226B8E;
     border-radius: 1em;
     letter-spacing: 5px;
   }
@@ -1002,7 +1000,7 @@ nav > ul > li {
   line-height: 20rem;
 }
 .projects__title > h1 {
-  font-size: 3.5em;
+  font-size: 3em;
   margin-bottom: 0.2em;
 }
 .projects__title > h4 {
@@ -1017,7 +1015,7 @@ nav > ul > li {
   justify-content: space-around;
   align-items: center;
   padding: 50px;
-  background-color: #2983AE;
+  background-color: #226B8E;
 }
 .projects__image {
   display: flex;
@@ -1083,25 +1081,54 @@ nav > ul > li {
 }
 .contact {
   display: flex;
-  justify-content: center;
-  padding: 5vw;
-}
-.contact__card {
-  padding: 5vw;
-  background-color: #2983AE;
-  background-image: url("../asset/Home/Contact.png");
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: center center;
-  border-radius: 20px;
+  flex-direction: column;
+  max-width: 1400px;
+  width: 80vw;
+  margin: 2em auto;
+  padding: 1.5em;
+  background-color: #226B8E;
+  border-radius: 2em;
+  text-align: justify;
   color: white;
 }
-.contact__explain {
-  width: 40%;
+.contact .explain {
+  order: 1;
+}
+.contact .mail {
   display: flex;
-  justify-content: center;
-  font-size: 24px;
-  font-family: "Coolvetica Condensed Rg", sans-serif;
+  flex: 1 1 100%;
+  flex-direction: column;
+  margin: 1em;
+  align-items: center;
+}
+.contact-img {
+  flex: 1 1 100%;
+}
+
+@media only screen and (min-width: 768px) {
+  .contact {
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+  .contact .explain {
+    max-width: 650px;
+    order: 0;
+    flex: 1 1 70%;
+  }
+  .contact-img {
+    max-width: 20%;
+    order: 1;
+    flex: 1 1 30%;
+  }
+  .contact-img svg {
+    width: 15em;
+    margin-left: -2em;
+    position: relative;
+    left: 3em;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
