feat service.html add Service page
What?: Minor changes on general layout

Breaking Changes? Changes from css/main.css to scss/main.css

--- a/scss/lib/_utils.scss
+++ b/scss/lib/_utils.scss
@@ -209,3 +209,21 @@
     font-size: $fs-section-title;
   }
 }
+
+  /*--------------------*/
+  /*----Placeholders----*/
+  /*--------------------*/
+
+  %background-image-main{
+    background-image: none;
+    background-repeat: no-repeat;
+    background-position: right -50px;
+    background-size:  auto 600px;
+  }
+
+  %background-image-left{
+    background-image: none;
+    background-repeat: no-repeat;
+    background-position: left top;
+    background-size:  auto 50vh;
+  }
