--- a/scss/pages/home/_whyUs.scss
+++ b/scss/pages/home/_whyUs.scss
@@ -45,7 +45,7 @@
     &__btn {
       background-color: $color-alt;
       margin-top: 3em;
-      padding: 0.3em 3em;
+      padding: 0.3em 0;
       border: 3px solid $color-primary;
       border-radius: 1em;
       letter-spacing: 5px;
