--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,3 +15,9 @@
 @import "pages/home/whyUs";
 @import "pages/home/projects";
 @import "pages/home/contact";
+
+@import "pages/services/main";
+@import "pages/services/request";
+@import "pages/services/quote";
+@import "pages/services/choose";
+@import "pages/services/plans";
